--- a/htmlcss/b4.css
+++ b/htmlcss/b4.css
@@ -8,15 +8,15 @@
     margin-bottom: 10px;
     padding : 10px 103px;
     border-radius: 10px;
-    background:  linear-gradient(to right, #7d35b8 , #bb1f8c);
+    background:  linear-gradient(to right, #6209ab , #bb1f8c);
     color: #fff;
     font-size: large;
     border: none;
 
 }
 
-.content{
-    background:  linear-gradient(to right, #7d35b8 , #bb1f8c);
+.content {
+    background: #7d35b8 ;
     width: 70%;
     margin:0 auto;
     padding: 5px 10px;  
@@ -24,6 +24,11 @@
     border-radius: 10px;
     color: #fff;
 
+}
+
+
+.right button {
+    background: #7d35b8;
 }
 .main{
     width: 70%;
@@ -60,4 +65,7 @@
     margin-top: 20px;
     border-radius: 10px;
     border: none;
+    background:  linear-gradient(to right, #6800bd , #bb1f8c);
+    color: white;
+    font-size: x-large;
 }
