--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .center {
     position: absolute;
     top: 50%;
@@ -8,79 +12,80 @@
   .tabs {
     display: flex;
     flex-wrap: wrap;
-    width: 800px;
+    width: 600px;
     color: white;
     justify-content: space-between;
   }
   
-  .tabs__label {
+  .label {
     padding: 3px 25px;
     font-size: 1.2rem;
     border-radius: 5px;
-    background-color: #b981de;
+    background-color: #9c44d6;
     font-weight: bold;
   }
   
-  .tabs__radio {
+  .radio {
     display: none;
   }
   
-  .tabs__radio:checked + .tabs__label {
+  .radio:checked + .label {
     color: white;
-    background-image: linear-gradient(to right, #9f20e8, #e820db);
+    background-image: linear-gradient(to right, #9f20e8, #c2073f);
   }
   
-  .tabs__radio:checked + .tabs__label + .tabs__content {
+  .radio:checked + .label + .content {
     display: initial;
   }
   
-  .tabs__content {
+  .content {
     order: 1;
     width: 100%;
     height: 400px;
     display: none;
-    background-color: #b981de;
+    background-color: #9c44d6;
     padding: 0px 20px;
     border-radius: 5px;
     margin-top: 5px;
     position: relative;
   }
   
-  .tabs__content p {
+  .content p {
     text-align: justify;
   }
   
-  .tabs__content .group__form {
+  .content .form {
     text-align: center;
   }
   
-  .tabs__content .group__form div {
+  .content .form div {
     padding: 5px 0px;
   }
   
-  .tabs__content .group__form .text__content input {
+  .content .form .text__content input {
     width: 100%;
     height: 40px;
   }
   
-  .tabs__content .group__form .submit {
+  .content .form .submit {
     padding: 3px 30px;
     font-size: 1.2rem;
-    background-image: linear-gradient(to right, #9f20e8, #e820db);
+    background-image: linear-gradient(to right, #3311c9, #c2073f);
     border: none;
     border-radius: 10px;
+    color: white;
   }
   
-  .tabs__content .profile {
+  .content .profile {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
   
-  .tabs__content .profile .profile__img img {
+  .content .profile .img img {
     width: 100%;
-    max-height: 250px;
+    max-height: 450px;
     height: auto;
     border-radius: 50%;
   }
@@ -93,10 +98,10 @@
     margin: 10px;
     font-weight: bold;
     font-size: 1.2rem;
-    background-image: linear-gradient(to right, #9f20e8, #e820db);
+    background-image: linear-gradient(to right, #3311c9, #c2073f);
   }
   
-  .tabs__content .profile .input__file {
+  .content .profile .input__file {
     text-align: center;
   }
   
@@ -115,10 +120,10 @@
     height: 0;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
-    border-bottom: 15px solid #b981de;
+    border-bottom: 15px solid #9c44d6;
   }
   
-  .click__top {
+  .top {
     position: fixed;
     top: -38.4px;
     left: 30%;
@@ -151,7 +156,7 @@
   }
   
   /* style the top button */
-  .click__top-button {
+  .top-button {
     position: absolute;
     left: 50%;
     top: 100%;
@@ -159,7 +164,7 @@
   }
   
   /* style the bottom container */
-  .click__bottom {
+  .bottom {
     position: fixed;
     bottom: -38.4px;
     left: 30%;
@@ -167,17 +172,17 @@
   }
   
   /* style the footer */
-  .click__bottom-footer {
+  .bottom-footer {
     color: #fff;
     text-align: center;
-    background-color: #b981de;
+    background-color: #9c44d6;
     padding: 10px 30px;
     width: auto;
     border-radius: 7px 7px 0px 0px;
   }
   
   /* style the bottom button */
-  .click__bottom-button {
+  .bottom-button {
     position: absolute;
     left: 50%;
     bottom: 100%;
@@ -185,7 +190,7 @@
   
   /* style the menu container */
   nav {
-    background-color: #b981de;
+    background-color: #9c44d6;
     border-radius: 0px 0px 7px 7px;
   }
   
@@ -214,17 +219,17 @@
   
   /* style the hover effect on the menu links */
   li:hover a {
-    background-image: linear-gradient(to right, #9f20e8, #e820db);
+    background-image: linear-gradient(to right, #3311c9, #c2073f);
   }
   
   /* apply the up animation when the footer checkbox is checked */
-  #checkfooter:checked ~ .click__bottom {
-    animation: up 1.5s forwards;
+  #checkfooter:checked ~ .bottom {
+    animation: up 0.1s forwards;
   }
   
   /* apply the down animation when the menu checkbox is checked */
-  #checkmenu:checked ~ .click__top {
-    animation: down 1s forwards;
+  #checkmenu:checked ~ .top {
+    animation: down 0.1s forwards;
     color: aqua;
   }
   
