--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,30 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   </head>
 
   <body>
+  <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/products/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/products/new">add</a>
+        </li>
+        </ul>
+    </div>
+  </div>
+</nav>
+    <% flash.each do |name, msg|%>
+    <%= content_tag :div, msg, class: name %>
+    <% end%>
     <%= yield %>
+    
   </body>
 </html>
