--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <table class="table">
@@ -16,7 +15,6 @@
       <th scope="col">description</th>
       <th scope="col">price</th>
       <th scope="col">category</th>
-      <th scope="col">details</th>
       <th scope="col">status</th>
       <th scope="col"><%= link_to('Create',new_product_path)%></th>
 
@@ -27,7 +25,7 @@
     <% @products.each.with_index do |product,index| %>
     <tr>
       <th scope="row"><%= index+1 %></th>
-      <th scope="row"><%= product.title %></th>
+      <td> <%= link_to product.title, product_path(product) %></td>
       <td><%= product.description %></td>
       <td><%= product.price %></td>
       <td>
@@ -35,8 +33,10 @@
             <%= pr.title + ' ,'%>
         <%end%>
       </td>
-      <td> <%= link_to product.title, product_path(product) %></td>
       <td><%= product.published == true ? 'show' : 'hide' %></td>
+      <td><%= link_to 'Edit', edit_product_path(product) %> 
+          <%= link_to 'Delete', product_path(product), data: {turbo_method: :delete, turbo_confirm: 'really delete'}%>
+      </td>
     </tr>
     <% end %>
 
