--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body>
+  <body class="container-sm">
   <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     
