--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   </head>
 
   <body class="container">
+    <div class="container-fluid">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </div>
+  
   <nav class="navbar navbar-expand-lg bg-light">
   <div class="container">
     
@@ -23,7 +28,13 @@
         <li class="nav-item">
           <a class="nav-link" href="/products/new">add</a>
         </li>
-        </ul>
+        <li class="nav-item">
+            <%= form_tag destroy_user_session_path, method: :delete do %>
+                <%= submit_tag "Sign out" %>
+              <% end %>
+
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
