--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,43 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> %>
   </head>
 
-  <body>
+  <body class="container-sm pt-2">
+  <%# top %>
+      <div class="row">
+        <div class="col-md-2">
+          <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/BMW_logo_%28gray%29.svg/2048px-BMW_logo_%28gray%29.svg.png" alt="" width="100"> 
+        </div>
+        <div class="col-md-6">Cột 2</div>
+        <div class="col-md-2 position-relative">
+          <div class="row position-absolute top-0 start-50 translate-middle-x">
+            <div class="col-md-12">
+              <a href="#">Post job</a>
+            </div>
+          </div>
+          <div class="row position-absolute bottom-0 start-50 translate-middle-x">
+            <div class="col-md-12">
+              <a href="#">Other content</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 position-relative">
+          <div class="row position-absolute top-0 start-50 translate-middle-x">
+            <div class="col-md-12">
+              <a href="#">Post job</a>
+            </div>
+          </div>
+          <div class="row position-absolute bottom-0 start-50 translate-middle-x">
+            <div class="col-md-12">
+              <a href="#">Other content</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+
     <%= yield %>
   </body>
 </html>
