--- a/app/views/jobs/citylist.html.erb
+++ b/app/views/jobs/citylist.html.erb
@@ -21,5 +21,12 @@
               </div>
             <% end %>
           </div>
+       
+            <%= paginate @topCities, theme: 'bootstrap-5' %>
+          
+
+
+
+
     </div>
 </div>
