--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -72,7 +72,7 @@
     <% end %>
     <div >
       <div class="btn btn-success" >
-        <%= link_to 'city_list',  city_list_path , style: "color: white;"%>
+        <%= link_to 'city_list',  cities_path , style: "color: white;"%>
       </div>
     </div>
   </div>
