convert to slim and fix file

--- a/app/assets/stylesheets/topPage.scss
+++ b/app/assets/stylesheets/topPage.scss
@@ -1,9 +1,10 @@
 .bold{
-    color: pink;
+  color: black;
 }
 .img{
-    border-radius: 20px;
+  border-radius: 20px;
 }
 a{
-    text-decoration: none;
+  text-decoration: none;
+  color: black;
 }
