--- a/app/assets/stylesheets/topPage.scss
+++ b/app/assets/stylesheets/topPage.scss
@@ -4,7 +4,14 @@
 .img{
   border-radius: 20px;
 }
+.color-text{
+  text-decoration: none;
+  color: black;
+}
 a{
   text-decoration: none;
+  color: black;
+}
+a:hover{
   color: black;
 }
