--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-  <div class="container text-center">
+  <div class="container">
 
     <div class="row ">
         <div class="col ">  <img class="-4 img img-fluid" src="/images/cover-fb-1m-1.webp" style="padding-left: 45px;" alt=""></div>
