--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
 
   <body>
-  <div class="container">
+    <div class="container">
+      <div class="container-fluid">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+      </div>
 
     <div class="row ">
         <div class="col ">  <img class="-4 img img-fluid" src="/images/cover-fb-1m-1.webp" style="padding-left: 45px;" alt=""></div>
