--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>Chào mừng bạn đến với ứng dụng của chúng tôi!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Bạn hãy nhấp vào đường link bên dưới để hoàn tất quá trình đăng ký:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<%= link_to 'Hoàn tất đăng ký', confirmation_url(@resource, confirmation_token: @token) %>
+
+<p>Nếu bạn không yêu cầu xác nhận này, vui lòng bỏ qua email này.</p>
