--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,20 @@
-<h2>Sign up</h2>
 
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+
+<div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class="col-md-4 p-5 shadow-sm border rounded-5 border-primary">
+      <h2 class="text-center mb-4 text-primary">Sign up</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control bg-info bg-opacity-10 border border-primary" %>
+        </div>
+        
+        <div class="actions d-grid mb-3">
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+      
+      <%= render "devise/shared/links" %>
     </div>
-
-    
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-  <% end %>
-  
-<%= render "devise/shared/links" %>
+</div> 
