--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,11 @@
         <div class="col ">  <img class="-4 img img-fluid" src="/images/cover-fb-1m-1.webp" style="padding-left: 45px;" alt=""></div>
         <div class="col-6 "></div>
         <div class="col">
-            <div class="col ">Login</div>
+            <div class="col" class ="btn btn-success"><%= link_to 'Sign in', new_user_session_path %></div>
             <div class="col ">Favorite</div>
         </div>
         <div class="col">
-            <div class="col ">Register</div>
+            <div class="col" class ="btn btn-success"><%= link_to 'Register', new_user_registration_path %></div>
             <div class="col ">History</div>
         </div>
     </div>
