--- a/app/views/registrations/thanks.html.erb
+++ b/app/views/registrations/thanks.html.erb
@@ -1,4 +1,11 @@
 <!-- app/views/registrations/thank_you.html.erb -->
 
-<h1>Thank You!</h1>
-<p>Your account has been created successfully. We appreciate your registration.</p>
+<%# <h1>Thank You!</h1> %>
+<div class="row d-flex justify-content-center pt-5">
+<p class="col-md-8 font-size">													
+Thank you for register our service, an confirmation email with registration link													
+has been sent to your email. Please check your email within 24 hours.													
+Please note that the registration link is only valid for 24 hours.													
+Over that period, you will have to register your email again.
+</p>
+</div>
