--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,6 @@
  *= require_self
  */
 @import "bootstrap";
-@import "topPage";
   .overlay {
       position: absolute;
       top: 50%;
@@ -26,4 +25,16 @@
     width: 100%;
     height: 100%;
   }
-  
+  .copy-right-sec{
+    padding: 1.8rem;
+      background: #28a347;
+      color: #fff;
+      text-align: center;
+  }
+  .copy-right-sec a{
+    color: #fcd462;
+      font-weight: 500;
+  }
+  a{
+    text-decoration:none;
+  }
