--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,22 +12,45 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="container-fluid">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+    <div class="container-fluid">
+    <p class="notice"><%= notice %></p>
+    <% if alert.present? %>
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Error</strong> <%= alert %>
+        <button type="button" class="btn-close" aria-label="Close"></button>
       </div>
+    <% end %>
+  </div>
 
     <div class="row ">
         <div class="col ">  <img class="-4 img img-fluid" src="/images/cover-fb-1m-1.webp" style="padding-left: 45px;" alt=""></div>
         <div class="col-6 "></div>
-        <div class="col">
-            <div class="col ">Login</div>
-            <div class="col ">Favorite</div>
-        </div>
-        <div class="col">
-            <div class="col ">Register</div>
-            <div class="col ">History</div>
+        <div class="col-4 d-flex flex-column justify-content-center">
+          <% if user_signed_in? %>
+            <div class="row flex-nowrap">
+              <div class="col btn btn-success">
+                <%= form_tag destroy_user_session_path, method: :delete do %>
+                        <%= submit_tag "Sign out", class: "btn btn-success" %>
+                <% end %>
+              </div>
+              <div class="col btn btn-success ms-3">Favorite</div>
+              <div class="col btn btn-success ms-3">
+                <%= link_to 'My Page', my_path %>
+              </div>
+              <div class="col btn btn-success ms-3">History</div>
+            </div>
+          <% else %>
+            <div class="row flex-nowrap">
+              <div class="col btn btn-success">
+                <%= link_to 'Sign in', new_user_session_path %>
+              </div>
+              <div class="col btn btn-success ms-3">Favorite</div>
+              <div class="col btn btn-success ms-3">
+                <%= link_to 'Register', new_user_registration_path %>
+              </div>
+              <div class="col btn btn-success ms-3">History</div>
+            </div>
+          <% end %>
         </div>
     </div>
   </div>
