--- a/app/views/jobs/index.html.slim
+++ b/app/views/jobs/index.html.slim
@@ -2,7 +2,7 @@
   = stylesheet_link_tag "topPage"
 div
   .pt-5.d-flex.justify-content-center
-    img[src="/images/cover-fb-1m-1.webp" alt=""]
+    img.rounded-4[src="/images/cover-fb-1m-1.webp" alt=""]
 
     .overlay
   h3.text-center.pt-5 
@@ -57,3 +57,4 @@ div
     .col-md-10
     .col-md-2.btn.btn-outline-success
       =link_to "Industry list", industries_path
+  div.p-2
