repair button link to

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col btn btn-success ms-3">Favorite</div>
                 <div class="col btn btn-success ms-3">
-                  <%= link_to 'My Page', my_path %>
+                  <%= link_to 'My Page' %>
                 </div>
                 <div class="col btn btn-success ms-3">History</div>
               </div>
