--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,10 +1,16 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, value: params[:email] %>
-  </div>
+  
+  <%= f.hidden_field :reset_password_token %>
+  
+  <% if @user_email.present? %>
+    <p>Reset password for <%= @user_email %></p>
+  <% else %>
+    <p>Invalid or expired reset password token</p>
+  <% end %>
+
+
 
 
   <div class="field">
