--- a/app/views/jobs/joblist.html.slim
+++ b/app/views/jobs/joblist.html.slim
@@ -35,16 +35,25 @@
           h5.text-left 
             = link_to job.name, job_path(job.id)
           p
-            =job.short_des + " ....."
+            - if job.short_des.present?
+              = job.short_des + " ....."
           p
             = job.company_district.present? ? job.company_district + "," : ""
             = job.work_place.present? ? job.work_place : ""
         div.col-md-1 
-        .col-md-2.d-flex.align-items-center.justify-content-center.cols-border
+        .col-md-2.d-flex.align-items-center.justify-content-center.cols-border 
           p
-            i.icon-default.fa-sharp.fa-solid.fa-star.icon-20
-            i.icon-heart.fa-sharp.fa-solid.fa-heart.icon-20
-            
+          - if current_user 
+            - if current_user.favourites.exists?(job_id: job.id)
+              = form_with(url: favourite_path(job), method: :delete, local: true) do |form|
+                = form.button class: 'btn btn-danger', data: { confirm: 'Are you sure?' } do
+                  i.fa-sharp.fa-regular.fa-heart
+            - else
+              = form_with(url: favourites_path, method: :post, local: true) do |form|
+                = form.hidden_field :user_id, value: current_user.id
+                = form.hidden_field :job_id, value: job.id
+                = form.button class: 'btn btn-success', data: { confirm: 'Are you sure?' } do
+                  i.fa-sharp.fa-solid.fa-heart
   - else
     p
       | Không có công việc trong thành phố này.
