--- a/app/views/jobs/joblist.html.slim
+++ b/app/views/jobs/joblist.html.slim
@@ -43,9 +43,9 @@
         div.col-md-1 
         .col-md-2.d-flex.align-items-center.justify-content-center.cols-border 
           p
-          - if current_user 
+          - if current_user
             - if current_user.favourites.exists?(job_id: job.id)
-              = form_with(url: favourite_path(job), method: :delete, local: true) do |form|
+              = form_with(url: favourite_path(current_user.favourites.find_by(job_id: job.id)), method: :delete, local: true) do |form|
                 = form.button class: 'btn btn-danger', data: { confirm: 'Are you sure?' } do
                   i.fa-sharp.fa-regular.fa-heart
             - else
