--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -4,7 +4,7 @@
 
 <p>Click the link below to reset your password using our secure server:	</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<%= reset_password_url( reset_password_token: @token) %>
 
 <p>If you did not request to have your password reset you can safely ignore this email. Rest assured your account is safe.	</p>
 
