--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,44 @@
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  
-  <%= f.hidden_field :reset_password_token %>
-  
+<div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class="col-md-4 p-5 shadow-sm border rounded-5 border-primary">
+      <h2 class="text-center mb-4 text-primary">Forgot password?</h2>
+      <%= form_for(resource, as: resource_name, url: reset_password_url(resource_name), html: { method: :put }, data: {turbo: false}) do |f| %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+        <div class="mb-3">
+          <%= f.label :email, class: "form-label" %>
+          <%= f.text_field :email, autofocus: true, autocomplete: "email", class: "form-control bg-info bg-opacity-10 border border-dark", readonly: true %>
+          <% if @user.errors[:email].any? %>
+              <div class="text-danger mb-3">
+                <%= form_error_messages(@user, :email) %>
+              </div>
+            <% end %>
+        </div>
+        
+        <div class="mb-3">
+          <%= f.label :password, class: "form-label" %>
+          <%= f.password_field :password, class: "form-control bg-info bg-opacity-10 border border-primary" %>
+          <% if @user.errors[:password].any? %>
+            <div class="text-danger mb-3">
+              <%= @user.errors.full_messages_for(:password).first %>
+            </div>
+          <% end %>
+        </div>
+        <div class="mb-3">
+          <%= f.label :password_confirmation, class: "form-label" %>
+          <%= f.password_field :password_confirmation, class: "form-control bg-info bg-opacity-10 border border-primary" %>
+          <% if @user.errors[:password_confirmation].any? %>
+            <div class="text-danger mb-3">
+              <%= @user.errors.full_messages_for(:password_confirmation).first %>
+            </div>
+          <% end %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %> 
+        <div class="actions d-grid mb-3">
+          <%= f.submit "Change your password", class: "btn btn-primary" %>
+          
+        </div>
+      <% end %>
+      
+    </div>
+</div> 
