--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -4,19 +4,10 @@
 
 <p>Click the link below to reset your password using our secure server:	</p>
 
-<%= reset_password_url( reset_password_token: @token) %>
+  <p><%= reset_password_url( reset_password_token: @token) %></p>
 
 <p>If you did not request to have your password reset you can safely ignore this email. Rest assured your account is safe.	</p>
 
 <p>Please also be noted that the above link is valid for 24 hours.</p>
 
 <p>If you did not request to have your password reset you can safely ignore this email. Rest assured your account is safe.	</p>
-
-
-																				
-																			
-																				
-																				
-																				
-																		
-
