--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                   <%= link_to 'Favourites', favourites_path %>
                 </div>
                 <div class="col btn btn-success ms-3">
-                  <%= link_to 'My Page' %>
+                  <%= link_to 'My Page', my_path %>
                 </div>
                 <div class="col btn btn-success ms-3">History</div>
               </div>
