--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
       <div  class="col-md-4">
       </div>
       <div  class="btn btn-danger  col-md-4">
-        <%= link_to 'My Page', my_path, :class =>"col-md-4 btn btn-danger" %>
+        <%= link_to 'My Jobs', my_jobs_path, :class =>"col-md-4 btn btn-prymary" %>
       </div>
       
     </div>
